Finalized signup/login form logic

--- a/web/src/stylesheets/abstracts/_variables.scss
+++ b/web/src/stylesheets/abstracts/_variables.scss
@@ -26,7 +26,7 @@ $text-color: rgb(34, 34, 34) !default;
 
 /// Main brand color
 /// @type Color
-$main-color: #ffa18e !default;
+$main-color: #00a6de !default;
 
 /// Light grey
 /// @type Color
