--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -22,8 +22,8 @@
   'layout/footer';
 
 // 5. Components
-// @import
-//   'components/project',
+@import
+  'components/Loading';
 //   'components/title',
 //   'components/hamburger';
 
