--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -14,7 +14,7 @@
 
 // 5. Components
 @import "components/Loading", "components/AuthenticatedForm",
-	"components/FormError.scss";
+	"components/FormError.scss", "components/PasswordHints.scss";
 //   'components/title',
 //   'components/hamburger';
 
