--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -14,7 +14,8 @@
 
 // 5. Components
 @import "components/Loading", "components/AuthenticatedForm",
-	"components/FormError.scss", "components/PasswordHints.scss";
+	"components/FormError.scss", "components/PasswordHints.scss",
+	"components/Modal.scss", "components/Navbar.scss";
 //   'components/title',
 //   'components/hamburger';
 
