--- a/web/src/stylesheets/components/Modal.scss
+++ b/web/src/stylesheets/components/Modal.scss
@@ -1,8 +1,9 @@
 .Modal-container {
-	width: 400px;
+	width: 57rem;
 	background-color: white;
   position: absolute;
   top: 50%;
   left: 50%;
 	transform: translate(-50%, -50%);
+  border-radius: 1.5rem;
 }
