--- a/web/src/stylesheets/components/PasswordHints.scss
+++ b/web/src/stylesheets/components/PasswordHints.scss
@@ -1,12 +1,12 @@
 .PasswordHints-container {
-  padding-top: 5px; 
+  padding-top: 0.5rem; 
   
   &__item {
     display: flex;
     align-items: center;
 
     svg {
-      margin-right: 3px;
+      margin-right: 0.5rem;
     }
   }
 }
