--- a/web/src/stylesheets/abstracts/_mixins.scss
+++ b/web/src/stylesheets/abstracts/_mixins.scss
@@ -7,55 +7,74 @@
 /// @param {Bool} $self [false] - Whether or not to include current selector
 /// @link https://twitter.com/csswizardry/status/478938530342006784 Original tweet from Harry Roberts
 @mixin on-event($self: false) {
-  @if $self {
-    &,
-    &:hover,
-    &:active,
-    &:focus {
-      @content;
-    }
-  } @else {
-    &:hover,
-    &:active,
-    &:focus {
-      @content;
-    }
-  }
+	@if $self {
+		&,
+		&:hover,
+		&:active,
+		&:focus {
+			@content;
+		}
+	} @else {
+		&:hover,
+		&:active,
+		&:focus {
+			@content;
+		}
+	}
 }
 
 /// Make a context based selector a little more friendly
 /// @author Kitty Giraudel
 /// @param {String} $context
 @mixin when-inside($context) {
-  #{$context} & {
-    @content;
-  }
+	#{$context} & {
+		@content;
+	}
+}
+
+@mixin buttonSvgOutline {
+	position: relative;
+	&::before {
+		content: "";
+		display: block;
+		position: absolute;
+		border-radius: 50%;
+		height: 200%;
+		width: 200%;
+		left: -50%;
+		top: -50%;
+	}
+
+	&:hover::before {
+		background-color: grey;
+		opacity: 0.1;
+	}
 }
 
 // ** Position of parent must be relative **
-// ::before, ::after 
+// ::before, ::after
 @mixin bottom-bar {
-  position: absolute;
-  content: "";
-  left: 0;
-  bottom: 0px;
-  width: 100%;
-  height: 0.1rem;
-  background: $dark-grey;
+	position: absolute;
+	content: "";
+	left: 0;
+	bottom: 0px;
+	width: 100%;
+	height: 0.1rem;
+	background: $dark-grey;
 }
 
 // ::before
 @mixin bottom-bar-before {
-  z-index: 1;
-  left: 0%;
-  width: 0%;
-  transition: 350ms ease-in-out;
+	z-index: 1;
+	left: 0%;
+	width: 0%;
+	transition: 350ms ease-in-out;
 }
 
-// :hover::before 
+// :hover::before
 @mixin bottom-bar-hover-before {
-  width: 100%;
-  left: 0%;
-  transition: 350ms ease-in-out; 
-  background: white;
+	width: 100%;
+	left: 0%;
+	transition: 350ms ease-in-out;
+	background: white;
 }
