--- a/web/src/stylesheets/components/AuthenticatedForm.scss
+++ b/web/src/stylesheets/components/AuthenticatedForm.scss
@@ -1,16 +1,175 @@
+:root {
+	--mouse-x: 0;
+	--mouse-y: 0;
+}
+
+.EntryFormContainer {
+	position: relative;
+
+	.EntryForm {
+		header {
+			height: 6rem;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			border-bottom: 1px solid rgb(235, 235, 235);
+			padding: 0 2.4rem;
+
+			button {
+				@include buttonSvgOutline;
+			}
+
+			div {
+				-webkit-box-flex: 0 !important;
+				flex: 0 0 16px !important;
+				text-align: right !important;
+			}
+		}
+
+		&__title {
+			font-size: 1.6rem;
+			text-align: center;
+			font-weight: 400;
+		}
+
+		&__main {
+			padding: 2.4rem;
+
+			&__subtitle {
+				h3 {
+					font-size: 2.2rem;
+					font-weight: 600;
+				}
+			}
+
+			&__form {
+				&__submit-button {
+					width: 100%;
+					padding: 1.4rem 2.4rem;
+					border-radius: 0.8rem;
+					transition: opacity 1.25s ease 0s;
+					-webkit-tap-highlight-color: transparent;
+
+					background: linear-gradient(
+						to right,
+						rgb(230, 30, 77) 0%,
+						rgb(227, 28, 95) 50%,
+						rgb(215, 4, 102) 100%
+					) !important;
+					position: relative;
+					-webkit-mask-image: -webkit-radial-gradient(
+						center,
+						white,
+						black
+					) !important;
+					// overflow: hidden;
+					color: white;
+					border-radius: 0.8rem;
+
+					.gradient-container {
+						position: absolute;
+						top: 0;
+						left: 0;
+						bottom: 0;
+						right: 0;
+						width: 100%;
+						height: 100%;
+
+						.gradient {
+							display: block !important;
+							width: 100% !important;
+							height: 100% !important;
+							min-width: 200px !important;
+							background-position: calc(
+									(100 - var(--mouse-x, 0)) * 1%
+								)
+								calc((100 - var(--mouse-y, 0)) * 1%);
+							background-size: 200% 200% !important;
+							opacity: 0;
+							transition: opacity 1.25s ease 0s !important;
+							background-image: radial-gradient(
+								circle at center center,
+								rgb(56, 159, 255) 0%,
+								rgb(30, 144, 230) 27.5%,
+								rgb(28, 162, 227) 40%,
+								rgb(4, 169, 215) 57.5%,
+								rgb(30, 156, 189) 75%,
+								rgb(30, 156, 189) 100%
+							);
+
+							&:hover {
+								opacity: 1;
+							}
+						}
+					}
+					.submit-button__text {
+						display: block !important;
+						position: relative !important;
+						pointer-events: none !important;
+					}
+				}
+			}
+
+			&__divider {
+				margin: 1.4rem 0;
+				text-align: center;
+				overflow: hidden;
+
+				&__or {
+					position: relative;
+					color: $muted-text-color;
+					font-size: 1.4rem;
+					padding: 0 1.6rem;
+
+					&::before {
+						content: "";
+						display: block;
+						position: absolute;
+						width: 70rem;
+						height: 0.1rem;
+						left: 130%;
+						top: 60%;
+						border-bottom: 1px solid $muted-line-color;
+					}
+
+					&::after {
+						content: "";
+						display: block;
+						position: absolute;
+						width: 70rem;
+						height: 0.1rem;
+						right: 130%;
+						top: 60%;
+						border-bottom: 1px solid $muted-line-color;
+					}
+				}
+			}
+
+			&__google-auth {
+				height: 4.6rem;
+				width: 100%;
+				color: white;
+				background-color: rgb(106, 128, 189);
+				border-radius: 0.8rem;
+			}
+		}
+	}
+}
+
 .MuiContainer {
-	padding-top: 1rem;
+	margin: 1.2rem 0;
+
+	&:first-child {
+		margin-top: 2.8rem;
+	}
 }
 
 .MuiFormControl-root {
 	position: relative;
 
 	.MuiFormLabel-root {
-		font-family: "Circular-Light";
-		font-weight: 800;
-
 		&.Mui-error {
-			color: #f44336;
+			color: rgb(193, 53, 21) !important;
 		}
 	}
 
@@ -30,8 +189,7 @@
 	}
 
 	.MuiInputBase-root {
-		font-family: "Circular-Light";
-		font-weight: 800;
+		font-weight: 400;
 		position: relative;
 		font-size: 1.6rem;
 
@@ -43,7 +201,6 @@
 
 		.MuiOutlinedInput {
 			&-notchedOutline {
-				// margin: 10px;
 				legend {
 					display: none;
 				}
@@ -53,14 +210,20 @@
 
 	.MuiFormHelperText-root {
 		margin: 0;
-		font-family: "Circular-Light";
-		font-weight: 800;
+		font-weight: 400;
 		font-size: 1.2rem;
+		&.Mui-error {
+			color: rgb(193, 53, 21) !important;
+		}
 	}
 }
 
 .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
 	border-color: black;
+}
+
+.MuiOutlinedInput-root.Mui-error .MuiOutlinedInput-notchedOutline {
+	border-color: rgb(193, 53, 21) !important;
 }
 
 input[type="date"]:in-range::-webkit-datetime-edit-year-field,
@@ -81,11 +244,11 @@ input[type="date"]:focus::-webkit-datetime-edit-text {
 // 	color: #f44336 !important;
 // }
 
-::-webkit-calendar-picker-indicator {
-	// It's a backgroudn image, and so color won't work. Inverting will, however, turn it white
+input[type="date"]::-webkit-calendar-picker-indicator {
+	// It's a background image, and so color won't work. Inverting will, however, turn it white
 	filter: invert(1);
 }
 
-:focus::-webkit-calendar-picker-indicator {
+input[type="date"]:focus::-webkit-calendar-picker-indicator {
 	filter: none;
 }
