Finished welcome form and added loading icon on db queries

--- a/web/src/stylesheets/components/PasswordHints.scss
+++ b/web/src/stylesheets/components/PasswordHints.scss
@@ -1,12 +1,14 @@
 .PasswordHints-container {
-  padding-top: 0.5rem; 
-  
-  &__item {
-    display: flex;
-    align-items: center;
+	margin-left: 0.4rem;
+	padding-top: 0.5rem;
+  font-weight: 400;
 
-    svg {
-      margin-right: 0.5rem;
-    }
-  }
+	&__item {
+		display: flex;
+		align-items: center;
+
+		svg {
+			margin-right: 0.5rem;
+		}
+	}
 }
