--- a/web/src/stylesheets/components/FormAuth.scss
+++ b/web/src/stylesheets/components/FormAuth.scss
@@ -1,8 +1,3 @@
-:root {
-	--mouse-x: 0;
-	--mouse-y: 0;
-}
-
 .EntryFormContainer {
 	position: relative;
 
@@ -20,9 +15,9 @@
 			}
 
 			div {
-				-webkit-box-flex: 0 !important;
-				flex: 0 0 16px !important;
-				text-align: right !important;
+				-webkit-box-flex: 0;
+				flex: 0 0 16px;
+				text-align: right;
 			}
 		}
 
@@ -35,13 +30,6 @@
 		&__main {
 			padding: 2.4rem;
 
-			&__subtitle {
-				h3 {
-					font-size: 2.2rem;
-					font-weight: 600;
-				}
-			}
-
 			&__form {
 				&__submit-button {
 					width: 100%;
@@ -49,20 +37,17 @@
 					border-radius: 0.8rem;
 					transition: opacity 1.25s ease 0s;
 					-webkit-tap-highlight-color: transparent;
-
-					background: linear-gradient(
+					background-image: linear-gradient(
 						to right,
-						rgb(230, 30, 77) 0%,
-						rgb(227, 28, 95) 50%,
-						rgb(215, 4, 102) 100%
-					) !important;
+						#00a6de,
+						#2baada,
+						#41add5,
+						#53b1d1,
+						#63b4cd
+					);
 					position: relative;
-					-webkit-mask-image: -webkit-radial-gradient(
-						center,
-						white,
-						black
-					) !important;
-					// overflow: hidden;
+					mask-image: -webkit-radial-gradient(center, white, black);
+					overflow: hidden;
 					color: white;
 					border-radius: 0.8rem;
 
@@ -76,25 +61,33 @@
 						height: 100%;
 
 						.gradient {
-							display: block !important;
-							width: 100% !important;
-							height: 100% !important;
-							min-width: 200px !important;
+							--mouse-x: 0;
+							--mouse-y: 0;
+							display: block;
+							width: 100%;
+							height: 100%;
+							min-width: 200px;
 							background-position: calc(
 									(100 - var(--mouse-x, 0)) * 1%
 								)
 								calc((100 - var(--mouse-y, 0)) * 1%);
-							background-size: 200% 200% !important;
+							background-size: 200% 200%;
 							opacity: 0;
-							transition: opacity 1.25s ease 0s !important;
+							transition: opacity 1.25s ease 0s;
 							background-image: radial-gradient(
-								circle at center center,
-								rgb(56, 159, 255) 0%,
-								rgb(30, 144, 230) 27.5%,
-								rgb(28, 162, 227) 40%,
-								rgb(4, 169, 215) 57.5%,
-								rgb(30, 156, 189) 75%,
-								rgb(30, 156, 189) 100%
+								circle,
+								#00a6de,
+								#2dabdd,
+								#44b1dc,
+								#56b6db,
+								#66bbda,
+								#66bbda,
+								#66bbda,
+								#66bbda,
+								#56b6db,
+								#44b1dc,
+								#2dabdd,
+								#00a6de
 							);
 
 							&:hover {
@@ -103,64 +96,38 @@
 						}
 					}
 					.submit-button__text {
-						display: block !important;
-						position: relative !important;
-						pointer-events: none !important;
+						display: block;
+						position: relative;
+						pointer-events: none;
 					}
 				}
-			}
-
-			&__divider {
-				margin: 1.4rem 0;
-				text-align: center;
-				overflow: hidden;
-
-				&__or {
-					position: relative;
-					color: $muted-text-color;
-					font-size: 1.4rem;
-					padding: 0 1.6rem;
-
-					&::before {
-						content: "";
-						display: block;
-						position: absolute;
-						width: 70rem;
-						height: 0.1rem;
-						left: 130%;
-						top: 60%;
-						border-bottom: 1px solid $muted-line-color;
-					}
-
-					&::after {
-						content: "";
-						display: block;
-						position: absolute;
-						width: 70rem;
-						height: 0.1rem;
-						right: 130%;
-						top: 60%;
-						border-bottom: 1px solid $muted-line-color;
-					}
-				}
-			}
-
-			&__google-auth {
-				height: 4.6rem;
-				width: 100%;
-				color: white;
-				background-color: rgb(106, 128, 189);
-				border-radius: 0.8rem;
 			}
 		}
 	}
 }
 
 .MuiContainer {
-	margin: 1.2rem 0;
+	margin: 2rem 0;
 
 	&:first-child {
 		margin-top: 2.8rem;
+	}
+	&:last-child {
+		margin-bottom: 1.4rem;
+	}
+
+	&--password {
+		position: relative;
+
+		button {
+			position: absolute;
+			right: 1.2rem;
+			top: 1.7rem;
+			text-decoration: underline;
+			font-size: 1.4rem;
+			transform: translateY(-50%);
+			color: $muted-text-color;
+		}
 	}
 }
 
