--- a/web/src/stylesheets/components/LoadingButton.scss
+++ b/web/src/stylesheets/components/LoadingButton.scss
@@ -2,12 +2,12 @@
 	display: flex;
 
 	&__dot {
-		width: 10px;
-		height: 10px;
+		width: 0.7rem;
+		height: 0.7rem;
 		background: black;
-    opacity: 10%;
+		opacity: 10%;
 		border-radius: 50%;
-		margin: 1px;
+		margin: 0.2rem;
 		animation: glow 0.5s ease-in-out;
 		animation-direction: alternate-reverse;
 		animation-iteration-count: infinite;
@@ -37,7 +37,21 @@
 	100% {
 		opacity: 10%;
 	}
-  0% {
-    opacity: 100%;
-  }
+	0% {
+		opacity: 100%;
+	}
+}
+
+.LoadingButton-container {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	background-color: rgb(218, 218, 218);
+	display: grid;
+	place-items: center;
+	z-index: 10;
 }
