--- a/web/src/stylesheets/components/Modal.scss
+++ b/web/src/stylesheets/components/Modal.scss
@@ -1,9 +1,11 @@
 .Modal-container {
 	width: 57rem;
+  min-height: 400px;
 	background-color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+	box-shadow: rgba(0, 0, 0, 0.28) 0px 8px 28px 0px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
 	transform: translate(-50%, -50%);
-  border-radius: 1.5rem;
+	border-radius: 1.5rem;
 }
