--- a/web/src/stylesheets/abstracts/_mixins.scss
+++ b/web/src/stylesheets/abstracts/_mixins.scss
@@ -32,6 +32,18 @@
 	}
 }
 
+@mixin focusOutline {
+	&:focus-visible {
+		outline: none;
+		transition: box-shadow 0.2s ease 0s;
+		box-shadow: rgba(255, 255, 255, 0.8) 0px 0px 0px 2px,
+			rgb(34, 34, 34) 0px 0px 0px 4px;
+		-webkit-box-shadow: rgba(255, 255, 255, 0.8) 0px 0px 0px 2px,
+			rgb(34, 34, 34) 0px 0px 0px 4px;
+		-webkit-appearance: none;
+	}
+}
+
 @mixin buttonSvgOutline {
 	position: relative;
 	&::before {
