--- a/web/src/stylesheets/components/FormLogIn.scss
+++ b/web/src/stylesheets/components/FormLogIn.scss
@@ -1,8 +1,13 @@
 .EntryForm__main__recover-password {
-  margin-top: 1.8rem;
+	margin-top: 1.8rem;
 	button {
-    font-size: 1.4rem;
-    text-decoration: underline;
-    letter-spacing: 0.03rem;
+		font-size: 1.4rem;
+		text-decoration: underline;
+		letter-spacing: 0.03rem;
+		transition: box-shadow 0.2s ease 0s;
+    border-radius: 0.4rem;
+    outline: none;
+
+		@include focusOutline;
 	}
 }
