--- a/web/src/stylesheets/components/FormWelcome.scss
+++ b/web/src/stylesheets/components/FormWelcome.scss
@@ -1,4 +1,7 @@
 .EntryFormContainer {
+	min-height: 40rem;
+	width: 100%;
+
 	.EntryForm__main {
 		&__subtitle {
 			h3 {
@@ -16,7 +19,7 @@
 				position: relative;
 				color: $muted-text-color;
 				font-size: 1.4rem;
-        font-weight: 400;
+				font-weight: 400;
 				padding: 0 1.6rem;
 
 				&::before {
@@ -44,10 +47,23 @@
 		}
 		&__auth-container {
 			&__auth {
+				height: 4.6rem;
+				width: 100%;
+				margin: 1.8rem 0;
 				display: flex;
 				align-items: center;
 				justify-content: space-between;
 				padding: 0 1.2rem;
+				transition: box-shadow 0.2s ease 0s;
+				outline: none;
+				color: rgb(72, 72, 72);
+				background-color: white;
+				border: 0.2rem solid rgb(176, 176, 176);
+				border-radius: 0.8rem;
+
+				&:hover {
+					border-color: black;
+				}
 
 				div:last-child {
 					-webkit-box-flex: 0;
@@ -55,19 +71,31 @@
 					text-align: right;
 				}
 
-				&--google {
-					height: 4.6rem;
-					width: 100%;
-					color: rgb(72, 72, 72);
-					background-color: white;
-					border: 0.2rem solid rgb(176, 176, 176);
-					border-radius: 0.8rem;
+				@include focusOutline;
 
-					&:hover {
-						border-color: black;
+				&--demo {
+					div:last-child {
+						flex: 0 0 25px;
 					}
 				}
 			}
 		}
+	}
+}
+
+.cover {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	z-index: 10000;
+	position: absolute;
+	border-radius: 1.4rem;
+	background-color: rgba(95, 95, 95, 0);
+
+	&.active {
+		bottom: 0;
+		background-color: rgba(185, 185, 185, 0.616);
+		transition: background-color 350ms ease-in-out;
 	}
 }
