--- a/web/src/stylesheets/components/_FormSignUp.scss
+++ b/web/src/stylesheets/components/_FormSignUp.scss
@@ -11,16 +11,21 @@
 						font-weight: bolder;
 					}
 					.terms {
-            text-decoration: underline;
+						text-decoration: underline;
 						color: rgb(0, 76, 196);
 
 						&:hover {
 							color: rgb(0, 55, 145);
-              transition: color 200ms;
+							transition: color 200ms;
 						}
 					}
 				}
 			}
 		}
 	}
+}
+
+.login-redirect-button {
+	border-radius: 0.4rem;
+	@include focusOutline;
 }
