--- a/web/src/stylesheets/abstracts/_mixins.scss
+++ b/web/src/stylesheets/abstracts/_mixins.scss
@@ -33,6 +33,8 @@
 }
 
 @mixin focusOutline {
+	transition: box-shadow 0.2s ease 0s;
+
 	&:focus-visible {
 		outline: none;
 		transition: box-shadow 0.2s ease 0s;
@@ -63,13 +65,14 @@
 	}
 
 	&:active::before {
+		background-color: grey;
+		opacity: 0.1;
 		transform: scale(0.9);
 		transition: transform 150ms ease-in-out;
 	}
 
-	&:focus::before {
+	&:focus-visible::before {
 		border: 0.2rem solid black;
-		border-radius: 50%;
 	}
 }
 
