--- a/web/src/stylesheets/components/_Modal.scss
+++ b/web/src/stylesheets/components/_Modal.scss
@@ -1,6 +1,6 @@
 .Modal-container {
 	background-color: white;
-	box-shadow: rgba(0, 0, 0, 0.28) 0px 8px 28px 0px;
+	box-shadow: rgba(0, 0, 0, 0.28) 0 0.8rem 2.8rem 0;
 	position: absolute;
 	top: 50%;
 	left: 50%;
