--- a/web/src/stylesheets/base/_typography.scss
+++ b/web/src/stylesheets/base/_typography.scss
@@ -4,10 +4,16 @@
 
 // 1rem/em = 10px
 html {
-	font: normal 62.5% / 1.4 $text-font-stack !important;
+	font: 300 62.5% / 1.4 $text-font-stack !important;
 }
 
 // body font size defaults to 16px
 body {
 	font-size: 1.6em;
+	font-weight: 300;
+	letter-spacing: 0.03rem !important;
+}
+
+button {
+	font-weight: 300;
 }
