--- a/web/src/stylesheets/components/_Inspirations.scss
+++ b/web/src/stylesheets/components/_Inspirations.scss
@@ -22,7 +22,7 @@
 			display: block;
 			position: absolute;
 			bottom: 0.3rem;
-      // Must subtract by section padding-left (2.4) and __tabs padding-left (1.4)
+			// Must subtract by section padding-left (2.4) and __tabs padding-left (1.4)
 			width: calc(100% - (1.4rem + 2.4rem));
 			height: 0.1rem;
 			background-color: rgb(221, 221, 221);
@@ -49,21 +49,34 @@
 				&:hover {
 					background-color: rgba(150, 150, 150, 0.082);
 				}
+
+				&:active {
+					transition: transform 200ms ease-in-out;
+					transform: scale(0.95);
+				}
 			}
 
 			&.active {
-				button span {
-					position: relative;
-					color: rgb(34, 34, 34);
+				button {
+					pointer-events: none;
 
-					&::after {
-						content: "";
-						display: block;
-						position: absolute;
-						bottom: -1.6rem;
-						width: 100%;
-						height: 0.2rem;
-						background-color: rgb(34, 34, 34);
+					&:active {
+						transform: none;
+					}
+
+					span {
+						position: relative;
+						color: rgb(34, 34, 34);
+
+						&::after {
+							content: "";
+							display: block;
+							position: absolute;
+							bottom: -1.6rem;
+							width: 100%;
+							height: 0.3rem;
+							background-color: rgb(34, 34, 34);
+						}
 					}
 				}
 			}
@@ -85,20 +98,38 @@
 	align-items: stretch;
 	justify-content: flex-start;
 	flex-wrap: wrap;
+	margin-top: 0.9rem;
 
 	&__item {
 		// Change width based on screen size, 25%, 33%, etc.
 		width: 50%;
-		padding: 1.6rem 0.6rem;
+		padding: 1.6rem 0;
+		pointer-events: none;
 
 		&__content {
+			font-weight: 400;
 			display: flex;
 			flex-direction: column;
 			font-size: 1.4rem;
-			color: rgb(34, 34, 34);
+			letter-spacing: 0.02rem;
+			color: $disabled-text-color;
 
 			span:last-child {
-				color: rgb(113, 113, 113);
+				color: rgb(197, 197, 197);
+			}
+		}
+	}
+	&__item.defined {
+		pointer-events: all;
+
+		.InspirationPanel__item__content {
+			font-weight: 300;
+			span:first-child {
+				color: black;
+			}
+
+			span:last-child {
+				color: rgba(63, 63, 63, 0.747);
 			}
 		}
 	}
