--- a/web/src/stylesheets/pages/_Landing.scss
+++ b/web/src/stylesheets/pages/_Landing.scss
@@ -38,7 +38,6 @@
 				align-items: center;
 				top: 37.5%;
 				font-size: 1.8rem;
-				font-weight: 500;
 				padding: 2rem;
 				margin-top: 3rem;
 
@@ -58,7 +57,7 @@
 
 						span {
 							font-size: 1.8rem;
-							font-weight: 800;
+							font-weight: 700;
 							background: rgb(88, 152, 50);
 							background: linear-gradient(
 								90deg,
@@ -106,17 +105,16 @@
 				transform: translateY(-15%);
 				color: white;
 
-				&>h3 {
+				& > h3 {
 					font-weight: 500;
 					font-size: 2.8rem;
 				}
 
-				&>span {
-					font-weight: 300;
+				& > span {
 					margin: 1.4rem;
 				}
 
-				&>button {
+				& > button {
 					padding: 0.8rem 1.6rem;
 					border-radius: 0.8rem;
 				}
@@ -125,6 +123,11 @@
 	}
 
 	&__inspirations {
-		
+	}
+
+	&__footer {
+		padding: 3.2rem 2.4rem 2.4rem 2.4rem;
+		background-color: #f7f7f7;
+		border-top: 1px solid #dddddd;
 	}
 }
