Added search bar, working on search component

--- a/web/src/stylesheets/base/_typography.scss
+++ b/web/src/stylesheets/base/_typography.scss
@@ -11,9 +11,9 @@ html {
 body {
 	font-size: 1.6em;
 	font-weight: 300;
-	letter-spacing: 0.03rem !important;
 }
 
 button {
+	letter-spacing: 0.03rem;
 	font-weight: 300;
 }
