--- a/web/src/stylesheets/main.scss
+++ b/web/src/stylesheets/main.scss
@@ -19,7 +19,7 @@
 	"components/PasswordHints.scss", "components/Modal.scss",
 	"components/Navbar.scss", "components/Search.scss",
 	"components/Destinations.scss", "components/ListingTypes.scss",
-	"components/Inspirations.scss";
+	"components/Inspirations.scss", "components/MobileNavbar.scss";
 
 // 6. Page-specific styles
 @import "pages/Listing", "pages/Landing";
