--- a/web/src/stylesheets/components/_Navbar.scss
+++ b/web/src/stylesheets/components/_Navbar.scss
@@ -24,17 +24,43 @@
 		}
 	}
 
+	&.transparent {
+		background-color: transparent;
+		box-shadow: none;
+		color: white;
+
+		.Navbar__left {
+			&::after {
+				background-color: transparent;
+			}
+
+			&__logo {
+				a svg {
+					fill: white;
+					transition: fill 200ms;
+				}
+			}
+		}
+
+		.Navbar__right {
+			&__globe {
+				button svg {
+					color: white;
+				}
+			}
+		}
+	}
+
 	&__left {
 		display: flex;
 		align-items: center;
 		padding-left: 4rem;
 		margin-right: auto;
-		transition: all 1s ease-in-out;
 
 		&::after {
 			box-shadow: rgb(0 0 0 / 8%) 0px 1px 12px;
 			transform-origin: 50% 0%;
-			transition-duration: 150ms;
+			transition-duration: 250ms;
 			transition-property: opacity, -ms-transform, -webkit-transform,
 				transform;
 			transition-timing-function: ease;
@@ -51,12 +77,18 @@
 
 		&__logo {
 			width: 3rem;
+
+			a svg {
+				fill: $main-color;
+				transition: fill 200ms;
+			}
 		}
 
 		&__search {
 			padding: 0 2.4rem;
 
 			&__button {
+				position: relative;
 				width: 30rem;
 				height: 4.8rem;
 				display: flex;
@@ -110,6 +142,7 @@
 			padding: 1.2rem;
 
 			& > button {
+				background-color: transparent;
 				@include buttonSvgOutline;
 			}
 		}
@@ -204,6 +237,7 @@
 }
 
 .Navbar__left__search__component {
+	// transform-origin: 86% 119%;
 	position: absolute;
 	border: 1px solid #dddddd;
 	border-radius: 32px;
@@ -214,8 +248,8 @@
 	width: 90%;
 	// box-shadow: 0px 16px 32px rgb(0 0 0 / 15%), 0px 3px 8px rgb(0 0 0 / 10%);
 	background-color: #ffffff;
-	left: 50%;
-	transform: translateX(-50%);
+	left: 5%;
+	// transform: translateX(-50%);
 	top: 15rem;
 
 	& > svg {
@@ -258,5 +292,67 @@
 				height: 5rem;
 			}
 		}
+	}
+}
+
+.component {
+	&-enter {
+		top: 40px;
+		opacity: 0.5;
+		transform-origin: 9% -30%;
+		transform: scaleX(0.3);
+	}
+
+	&-enter-active {
+		transform-origin: 9% -30%;
+		top: 150px;
+		opacity: 1;
+		transform: scaleX(1);
+		transition: 150ms ease;
+	}
+
+	&-exit {
+		top: 150px;
+		transform: scaleX(1);
+		transform-origin: 9% -30%;
+		opacity: 1;
+	}
+
+	&-exit-active {
+		transform-origin: 9% -30%;
+		transform: scaleX(0.3);
+		top: 40px;
+		opacity: 0;
+		transition: 150ms ease;
+	}
+}
+
+.button {
+	&-enter {
+		transform-origin: 9% -30%;
+		top: 90px;
+		opacity: 0;
+		transform: scaleX(2);
+	}
+
+	&-enter-active {
+		top: 0px;
+		opacity: 1;
+		transform: scaleX(1);
+		transition: 150ms ease;
+	}
+
+	&-exit {
+		transform-origin: 9% -30%;
+		transform: scaleX(1);
+		top: 0px;
+		opacity: 1;
+	}
+
+	&-exit-active {
+		transform: scaleX(2);
+		top: 90px;
+		opacity: 0;
+		transition: 150ms ease;
 	}
 }
