Experimenting with moving search component out of navbar__left

--- a/web/src/stylesheets/abstracts/_variables.scss
+++ b/web/src/stylesheets/abstracts/_variables.scss
@@ -26,6 +26,7 @@ $muted-line-color: #ebebeb;
 /// Muted text color
 /// @type Color
 $muted-text-color: #757575;
+$muted-text-color-2: rgb(194, 194, 194);
 
 /// Disabled text color
 /// @type Color
